ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxingress
  # namespace: ingress-nginx
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: "daisy.youjins.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginxsvc
                port:
                  number: 80
